# ModernCppComponent_ConanWorkspaceProto

./: .gitignore  README.md  setenv.source
down/: CMakeLists.txt
down/conan/: conanfile.py  customconan.cmake
down/src/apps/consumer/consumer/: CMakeLists.txt
editablebuild/: dobuild.sh  layout.ini
manualbuild/: dobuild.sh
up/: CMakeLists.txt
up/cmake/: PackageConfig.cmake.in
up/conan/: conanfile.py
up/src/libs/alpha/alpha/: CMakeLists.txt
up/src/libs/beta/beta/: CMakeLists.txt
workspacebuild/: CMakeLists.txt  dobuild.sh  layout.ini  ws.yml
